<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText android:id="@+id/editTextClientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"/>

    <EditText android:id="@+id/editTextClientFantasyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextClientName"
        android:hint="@string/fantasy_name_hint"/>

    <RadioGroup android:id="@+id/radioGroupCpfCnpj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/editTextClientFantasyName"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton android:id="@+id/radioButtonClientCPF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CPF"/>

        <RadioButton
            android:id="@+id/radioButtonClientCNPJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/radioButtonClientCPF"
            android:text="CNPJ"
            android:layout_alignBaseline="@+id/radioButtonClientCPF"
            android:layout_alignBottom="@+id/radioButtonClientCPF"
            android:layout_toRightOf="@+id/radioButtonClientCPF"
            android:layout_toEndOf="@+id/radioButtonClientCPF" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextClientCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf_hint"
        android:visibility="invisible"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/editTextClientFantasyName"
        android:layout_toRightOf="@+id/radioGroupCpfCnpj"
        android:layout_toEndOf="@+id/radioGroupCpfCnpj" />

    <EditText
        android:id="@+id/editTextClientCNPJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/editTextClientFantasyName"
        android:layout_toRightOf="@+id/radioGroupCpfCnpj"
        android:layout_toEndOf="@+id/radioGroupCpfCnpj"
        android:hint="@string/cnpj_hint"
        android:visibility="invisible" />

    <LinearLayout android:id="@+id/linearLayoutMotherAndFatherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextClientCPF"
        android:orientation="horizontal"
        tools:weightSum="2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <EditText android:id="@+id/editTextClientMotherName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mother_name_hint"/>

        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <EditText android:id="@+id/editTextClientFatherName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/father_name_hint"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayoutMotherAndFatherName"
        android:orientation="horizontal"
        tools:weightSum="3">

        <EditText android:id="@+id/editTextClientCovenant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/covenant_hint"/>

        <EditText android:id="@+id/editTextClientSpouse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/spouse_hint"/>

        <LinearLayout android:id="@+id/linearLayoutClientGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView android:id="@+id/textViewNewClientGenderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexo: "
                android:layout_marginTop="10dp"/>

            <RadioGroup android:id="@+id/radioGroupClientGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/radioButtonClientGenderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"/>
                <RadioButton android:id="@+id/radioButtonClientGenderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F"
                    />

            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
